--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stunner</title>
+  <title>My Web Page</title>
+  <style>
+    .container {
+      width: 100%;
+      background-color: brown;
+    }
+    .photo {
+      float: right;
+      width: 50%;
+      height: auto;
+    }
+    .content {
+      float: left;
+      width: 50%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
-    <!--this is a coment-->
-    <h1 style="color: brown; background-color: azure;"> Who is Stunner</h1>
-    <p>Stunner is an individua in bugema university</p>
-
-    <p>This is a block element</p><p>and it doesnt apper an the same line</p>
-
-    <a href="index.html">Open home page<a>
-    <a href="skill.html">Open skill page<a>
-    <a href="contact.html">Open contact page<a>
-        <img src="kei.jpeg" alt="student photo">
-        
-
-
-    
-
+  <div class="container">
+    <div class="photo">
+      <img src="me.jpeg" alt="MY PHOTO">
+    </div>
+    <div class="content">
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Minima exercitationem, omnis architecto vero cum provident 
+        eius voluptate quaerat iure quia a mollitia quam porro possimus aperiam ipsam? Officia,
+         illo nostrum.</p>
+    </div>
+  </div>
 </body>
 </html>
